# openapi-mcp-proxy

./: .env.example  .gitignore  AGENTS.md  Agents.md  README.md  openapi.yaml  pyproject.toml
examples/: claude_desktop_config.json  query_example.py
src/mcp_cnb_knowledge/: config.py  openapi.yaml  server.py  spec_loader.py
src/openapi_mcp_proxy/: __init__.py  config.py  server.py  spec_loader.py
src/openapi_mcp_proxy/core/: __init__.py  auth.py  client.py  config.py  server.py  spec.py
tests/: test_auth.py  test_client.py  test_config.py  test_server.py  test_spec_loader.py
