[project]
name = "openapi-mcp-proxy"
version = "0.2.0"
description = "Generic OpenAPI → MCP proxy for MCP clients"
authors = [
    {name = "hicaosen",email = "cscg52@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<1.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[project.scripts]
openapi-mcp-proxy = "openapi_mcp_proxy.server:run"

[tool.poetry]
packages = [{include = "openapi_mcp_proxy", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
